creacion del mapa con la localizacion del restaurante y hacer que el server se actualice solo al hacer cambios

--- a/views/vistas.njk
+++ b/views/vistas.njk
@@ -16,9 +16,9 @@
   <main>
     <h1>Menú del Restaurante</h1>
     <ul>
-      <% menu.forEach(item => { %>
-        <li><%= item.name %> - €<%= item.price %></li>
-      <% }) %>
+      {% for item in menu %}
+        <li>{{ item.name }} - €{{ item.price }}</li>
+      {% endfor %}
     </ul>
   </main>
 </body>
