creacion del logo de la marca y hacer que aparezca en todas las paginas arriba a la izquierda

--- a/views/base.njk
+++ b/views/base.njk
@@ -18,10 +18,21 @@
       color: #333;
       font-weight: bold;
     }
+    .logo {
+      height: 60px;
+      vertical-align: middle;
+      margin-right: 20px;
+    }
+    header {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
   </style>
 </head>
 <body>
   <header>
+    <img src="/logo.png" alt="Logo del Restaurante" class="logo" />
     <nav>
       <a href="/">Menú</a>
       <a href="/about">Sobre Nosotros</a>
